syntax = "proto3";

package country.v2;

option csharp_namespace = "CountryServices.v2";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CountryService {
  rpc GetAll(google.protobuf.Empty) returns (stream CountryReply) {}
  rpc Get(CountryIdRequest) returns (CountryReply) {}
  rpc Update(CountryUpdateRequest) returns (google.protobuf.Empty) {}
  rpc Create(stream CountryCreationRequest) returns (stream CountryCreationReply) {}
}

message CountryReply {
  int32 Id = 1;
  string Name = 2;
  string Description = 3;
  google.protobuf.Timestamp CreateDate = 5;
  google.protobuf.Timestamp UpdateDate = 6;
}

message CountryIdRequest {
  int32 Id = 1;
}

message CountryUpdateRequest {
  int32 Id = 1;
  string Description = 3;
  google.protobuf.Timestamp UpdateDate = 6;
}

message CountryCreationRequest {
  string Name = 2;
  string Description = 3;
  google.protobuf.Timestamp CreateDate = 5;
}

message CountryCreationReply {
  int32 Id = 1;
  string Name = 2;
}